--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -62,3 +62,16 @@ jobs:
         -d '{"vcs":"git","vcs_url":"${{ inputs.TEMPLATE_REPO_URL }}","vcs_username":"${{ vars.GH_USER }}","vcs_password":"${{ secrets.GH_TOKEN  }}"}')
         importStatus=$(echo $importOutput | jq '.status' -r )
         if [ -z "$importStatus" ]; then exit 2 ; fi 
+    - name: 'Confirming Import was successful'
+      shell: bash
+      run: |
+        while [ "$importStatus" != "complete" ]
+        do
+          sleep 15
+          importStatus=$(curl -X GET '${{ env.NEW_REPO_API_URL }}/import' \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" )
+          importStatus=$(echo $importOutput | jq '.status' -r )
+          if [ -z "$importStatus" ]; then exit 2 ; fi
+        done
