--- a/.github/workflows/create-gh-repo.yml
+++ b/.github/workflows/create-gh-repo.yml
@@ -71,7 +71,7 @@ jobs:
           importStatus=$(curl -X GET '${{ env.NEW_REPO_API_URL }}/import' \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" )
-          importStatus=$(echo $importOutput | jq '.status' -r )
+          -H "X-GitHub-Api-Version: 2022-11-28" | jq '.status' -r )
+          echo 'importStatus: '$importStatus
           if [ -z "$importStatus" ]; then exit 2 ; fi
         done
