--- a/.github/workflows/initialize-tfc-workspace.yml
+++ b/.github/workflows/initialize-tfc-workspace.yml
@@ -66,7 +66,7 @@ jobs:
         orgName: ${{ inputs.ORG_NAME }}
         workspaceName: ${{ inputs.WORKSPACE_NAME }}
         variableName: tags
-        category: terraform
+        category: hcl
         sensitive: false
         value: ${{ inputs.TAGS }}"        
     - name: 'Update TFC Variable - ARM_SUBSCRIPTION_ID'
